//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table User {
  id Int [pk, increment]
  name String [not null]
  email String [unique, not null]
  password String [not null]
  imgUrl String [not null]
  isManager Boolean [not null]
  role String [not null]
  age Int [not null]
  telephone String [not null]
  cpf String [unique, not null]
  street String [not null]
  number String [not null]
  city String [not null]
  state String [not null]
  zipCode String [not null]
  bio String [not null, default: 'Just a TeamUp user']
  admissionDate DateTime [default: `now()`, not null]
  othersEvaluated OthersEvaluation [not null]
  othersEvaluator OthersEvaluation [not null]
  selfEvaluation SelfEvaluation [not null]
  tuningEvaluated Tuning [not null]
  tuningEvaluator Tuning [not null]
}

Table Cycle {
  id Int [pk, increment]
  cycleName String [not null]
  initialDate DateTime [default: `now()`, not null]
  finalDate DateTime [not null]
  lastUpdated DateTime [not null]
  emailSent Boolean [not null, default: false]
  othersEvaluation OthersEvaluation [not null]
  selfEvaluation SelfEvaluation [not null]
  tuning Tuning [not null]
}

Table SelfEvaluation {
  id Int [pk, increment]
  userId Int [not null]
  cycleId Int [not null]
  ownershipMentalityGrade Int [not null, default: -1]
  ownershipMentalityComment String [not null, default: '']
  learningAgilityGrade Int [not null, default: -1]
  learningAgilityComment String [not null, default: '']
  resilienceAdversityGrade Int [not null, default: -1]
  resilienceAdversityComment String [not null, default: '']
  teamworkGrade Int [not null, default: -1]
  teamworkComment String [not null, default: '']
  outOfTheBoxThinkingBehavioralGrade Int [not null, default: -1]
  outOfTheBoxThinkingBehavioralComment String [not null, default: '']
  deliveringQualityGrade Int [not null, default: -1]
  deliveringQualityComment String [not null, default: '']
  meetingDeadlinesGrade Int [not null, default: -1]
  meetingDeadlinesComment String [not null, default: '']
  doingMoreWithLessGrade Int [not null, default: -1]
  doingMoreWithLessComment String [not null, default: '']
  outOfTheBoxThinkingExecutionGrade Int [not null, default: -1]
  outOfTheBoxThinkingExecutionComment String [not null, default: '']
  lastUpdated DateTime [default: `now()`, not null]
  isFinalized Boolean [not null, default: false]
  cycle Cycle [not null]
  user User [not null]
}

Table OthersEvaluation {
  id Int [pk, increment]
  evaluatorUserId Int [not null]
  evaluatedUserId Int [not null]
  cycleId Int [not null]
  grade Int [not null]
  comment String [not null]
  lastUpdated DateTime [default: `now()`, not null]
  isFinalized Boolean [not null, default: false]
  cycle Cycle [not null]
  evaluated User [not null]
  evaluator User [not null]

  indexes {
    (evaluatorUserId, evaluatedUserId, cycleId) [unique]
  }
}

Table Tuning {
  id Int [pk, increment]
  collaboratorUserId Int [not null]
  managerUserId Int [not null]
  cycleId Int [not null]
  ownershipMentalityGrade Int [not null]
  learningAgilityGrade Int [not null]
  resilienceAdversityGrade Int [not null]
  teamworkGrade Int [not null]
  outOfTheBoxThinkingBehavioralGrade Int [not null]
  deliveringQualityGrade Int [not null]
  meetingDeadlinesGrade Int [not null]
  doingMoreWithLessGrade Int [not null]
  outOfTheBoxThinkingExecutionGrade Int [not null]
  grade Float [not null]
  lastUpdated DateTime [default: `now()`, not null]
  cycle Cycle [not null]
  evaluated User [not null]
  evaluator User [not null]
}

Ref: SelfEvaluation.cycleId > Cycle.id

Ref: SelfEvaluation.userId > User.id

Ref: OthersEvaluation.cycleId > Cycle.id

Ref: OthersEvaluation.evaluatedUserId > User.id

Ref: OthersEvaluation.evaluatorUserId > User.id

Ref: Tuning.cycleId > Cycle.id

Ref: Tuning.collaboratorUserId > User.id

Ref: Tuning.managerUserId > User.id